# labios

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEX-REVIEW-PROMPT.md  CONTRIBUTING.md  Dockerfile  LABIOS-2.0.md  LABIOS-SPEC.md  README.md  dependencies.sh  docker-compose.elastic.yml  docker-compose.yml  labios.pc.in  notes
.github/workflows/: ci.yml
.planning/audits/: codex-paper-audit.md
benchmark/: driver.cpp
benchmark/src/: cm1_base.cpp  cm1_tabios.cpp  hacc_base.cpp  hacc_tabios.cpp  kmeans_base.cpp  kmeans_tabios.cpp  montage_base.cpp  montage_tabios.cpp  simple_read.cpp  simple_write.cpp  stress_test.cpp  util.h
cmake/: LabiosDependencies.cmake
conf/: default.yaml  labios.toml
conf/profiles/: agentic.toml  energy_savings.toml  high_bandwidth.toml  low_latency.toml
docs/: architecture.md  backends.md  configuration.md  deployment.md  getting-started.md  mcp-integration.md  sdk-guide.md
external_libs/cereal/: cereal.hpp
include/: aetrio.h  config_manager.cpp  config_manager.h  labios.h  porus.h  posix.h
include/labios/: catalog.h  catalog_manager.h  channel.h  client.h  config.h  content_manager.h  continuation.h  label.h  label_manager.h  labios.h  labios_system.h  observability.h  session.h  shuffler.h  telemetry.h  transparent_string_hash.h  uri.h  warehouse.h  worker_manager.h  workspace.h
mcp/: Dockerfile  claude-code-config.json  connect.sh  requirements.txt
mcp/labios_mcp/: __init__.py  __main__.py  server.py
mcp/tests/: test_server.py
schemas/: label.fbs
scripts/: average_ts.sh  bb_servers  bb_start.sh  bb_stop.sh  calc_ts.sh  calc_worker.sh  check_workers.sh  clean_workers.sh  clients  drop_cache.sh  elastic-demo.sh  kill_pfs.sh  log_reset.sh  memcached_server  nats_worker_master  nats_worker_slaves  nodes  pfs_start.sh  reboot_servers.sh  servers_reboot  setup_clients.sh  setup_limits.sh  start_clients.sh  start_memcached.sh  start_nats.sh  start_nfs.sh  start_ts.sh  start_workers.sh  stop_clients.sh  stop_pfs.sh  ts_nodes  tune.sh  unsetup_clients.sh  various_cmds.txt  workers
scripts/conf/: bb.conf  pfs.conf
src/: System.cpp  System.h  aetrio_system.cpp  aetrio_system.h  api.cpp  api.h  labios_system.cpp  mpi_init.cpp  mpi_init.h  porus_system.cpp  porus_system.h  posix.cpp  posix.h  system.cpp  system.h
src/client/: PorusClient.cpp  PorusClient.h  client.cpp  client.h  main.cpp
src/common/: Timer.cpp  city.cc  config_manager.cpp  config_manager.h  configuration_manager.cpp  configuration_manager.h  constants.h  data_structures.h  enumeration.h  enumerations.h  exception.h  exceptions.h  porus_system.cpp  porus_system.h  return_codes.h  structure.h  threadPool.cpp  threadPool.h  timer.cpp  timer.h  utilities.h  utility.h
src/drivers/: posix_intercept.cpp
src/labios/: CMakeLists.txt  catalog.cpp  catalog_manager.cpp  channel.cpp  client.cpp  config.cpp  content_manager.cpp  continuation.cpp  label.cpp  label_manager.cpp  labios.cpp  observability.cpp  session.cpp  shuffler.cpp  telemetry.cpp  uri.cpp  warehouse.cpp  worker_manager.cpp  workspace.cpp
src/labios/adapter/: fd_table.cpp  posix_adapter.cpp
src/labios/backend/: kv_backend.cpp  posix_backend.cpp  registry.cpp  sqlite_backend.cpp
src/labios/elastic/: decision_engine.cpp  docker_client.cpp
src/labios/sds/: builtins.cpp  executor.cpp  program_repo.cpp  types.cpp
src/labios/solver/: constraint.cpp  minmax.cpp  random.cpp  round_robin.cpp
src/labios/transport/: nats.cpp  redis.cpp
src/lib/: driver.cpp  mpi.cpp  mpi.h  posix.cpp  posix.h
src/python/: labios_module.cpp
src/services/: CMakeLists.txt  labios-demo.cpp  labios-dispatcher.cpp  labios-manager.cpp  labios-worker.cpp
src/system_manager/: system_manager_service.cpp  system_manager_service.h
src/task_scheduler/: main.cpp  task_scheduler.cpp  task_scheduler.h  task_scheduler_service.cpp  task_scheduler_service.h
src/worker/: main.cpp  worker.cpp  worker.h  worker_service.cpp  worker_service.h
tasks/: CMakeLists.txt  chimaera_repo.yaml
tasks/labios/: CMakeLists.txt
tasks/labios/include/labios/: labios_client.h  labios_lib_exec.h  labios_methods.compiled.yaml  labios_methods.h  labios_methods.yaml  labios_tasks.h
tasks/labios/src/: CMakeLists.txt  labios_client.cc  labios_monitor.py  labios_runtime.cc  mytokenizer.cpp
tasks/labios/test/: CMakeLists.txt  cm1_base.cc  cm1_base.cpp  cm1_tabios.cc  cm1_tabios.cpp  hacc_base.cc  hacc_base.cpp  hacc_tabios.cc  hacc_tabios.cpp  kmeans_base.cc  kmeans_base.cpp  kmeans_tabios.cc  kmeans_tabios.cpp  labios_test.cc  labios_test.py  labios_wrapper.cpp  montage_base.cc  montage_base.cpp  montage_tabios.cc  montage_tabios.cpp  simple_read.cpp  simple_write.cc  stress_test.cc
testing/: trace_replayer.cpp  trace_replayer.h
testing/traces/: MA.csv  (+1 more)
tests/: CMakeLists.txt
tests/benchmark/: bench_agentic_worker.cpp  bench_checkpoint_storm.cpp  bench_coding_agent_io.cpp  bench_cross_backend_etl.cpp  bench_large_file_pipeline.cpp  bench_multi_agent_collab.cpp  bench_parallel_scan.cpp  bench_rag_pipeline.cpp  bench_scale_adaptation.cpp  bench_science_pipeline.cpp  bench_sequential_scan.cpp  bench_session_recall.cpp  bench_small_io.cpp  bench_write_conflict.cpp
tests/integration/: benchmark_test.cpp  data_path_test.cpp  elastic_flood_test.cpp  intercept_test.cpp  kernel_cm1_test.cpp  kernel_hacc_test.cpp  kernel_kmeans_test.cpp  kernel_montage_test.cpp  scheduling_test.cpp  smoke_test.cpp
tests/python/: test_labios.py
tests/unit/: backend_test.cpp  catalog_manager_test.cpp  channel_test.cpp  client_api_test.cpp  client_async_test.cpp  config_test.cpp  content_manager_test.cpp  continuation_test.cpp  docker_client_test.cpp  elastic_decision_test.cpp  elastic_orchestrator_test.cpp  elastic_tiered_test.cpp  fd_table_test.cpp  label_manager_test.cpp  label_test.cpp  observability_test.cpp  sds_test.cpp  shuffler_test.cpp  solver_constraint_test.cpp  solver_intent_test.cpp  solver_minmax_test.cpp  solver_random_test.cpp  solver_test.cpp  transport_test.cpp  uri_test.cpp  worker_manager_test.cpp  workspace_test.cpp
(+196 files in other folders)
